--- a/src/main/resources/assets/raidim/lang/zh_cn.json
+++ b/src/main/resources/assets/raidim/lang/zh_cn.json
@@ -3,5 +3,7 @@
 	"item.raidim.miner_spawn_egg":"挖掘者刷怪蛋",
 	"entity.raidim.diggingegg":"挖掘蛋",
 	"entity.raidim.miner":"挖掘者",
-	"item.minecraft.illusioner_spawn_egg":"幻术师刷怪蛋"
+	"item.minecraft.illusioner_spawn_egg":"幻术师刷怪蛋",
+	"item.minecraft.snow_golem_spawn_egg":"雪傀儡刷怪蛋",
+	"item.minecraft.iron_golem_spawn_egg":"铁傀儡刷怪蛋"
 }
