--- a/src/main/resources/assets/raidim/lang/zh_cn.json
+++ b/src/main/resources/assets/raidim/lang/zh_cn.json
@@ -1,10 +1,10 @@
 {
 	"item.raidim.diggingegg":"挖掘蛋",
 	"item.raidim.miner_spawn_egg":"挖掘者刷怪蛋",
-	"item.raidim.electrician_spawn_egg":"电工刷怪蛋",
+	"item.raidim.electrician_spawn_egg":"杨永信刷怪蛋",
 	"entity.raidim.diggingegg":"挖掘蛋",
 	"entity.raidim.miner":"挖掘者",
-	"entity.raidim.electrician":"电工",
+	"entity.raidim.electrician":"杨永信",
 	"item.minecraft.illusioner_spawn_egg":"幻术师刷怪蛋",
 	"item.minecraft.snow_golem_spawn_egg":"雪傀儡刷怪蛋",
 	"item.minecraft.iron_golem_spawn_egg":"铁傀儡刷怪蛋"
